2008-08-13  kitone  <kitone@gna.org>

	* src/DocumentSystem.cc:
	Fix: Untitled document translatable.

	* src/gui/DialogFileChooser.cc:
	Fix: Add translation string.

2008-08-13  kitone  <kitone@gna.org>

	* Makefile.am:
	* autogen.sh:
	* configure.in:
	* prepare-po.sh:
	* share/Makefile.am:
	Add intltool. *.desktop file can be translated.
	Patch by Luboš Staněk.

	* share/subtitleeditor.desktop:
	Remove file.

	* share/subtitleeditor.desktop.in:
	New file.

2008-08-13  kitone  <kitone@gna.org>

	* acinclude.m4:
	Adds missing files from autoconf-archive for the AX_CHECK_GL macro.
	Patches by Luboš Staněk.

2008-08-12  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.22.2 release.

2008-08-11  kitone  <kitone@gna.org>

	* share/glade/dialog-find-and-replace.glade:
	* share/glade/dialog-preferences.glade:
	* src/gui/DialogFileChooser.cc:
	* src/gui/PreferencesUI.cc:
	Fix: Spelling errors, video/audio sink translation, new translation string.
	Patches by Luboš Staněk.

2008-08-10  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.22.1 release.

2008-08-10  kitone  <kitone@gna.org>

	* src/utility.cc:
	* src/utility.h:
	Add function set_transient_parent.

	* src/actions/ChangeFramerate.cc:
	* src/actions/DocumentManagement.cc:
	* src/actions/FindAndReplace.cc:
	* src/actions/MoveSubtitles.cc:
	* src/actions/ScaleSubtitles.cc:
	* src/actions/SpellChecking.cc:
	* src/actions/SplitDocument.cc:
	* src/actions/StyleEditor.cc:
	* src/actions/ViewManager.cc:
	* src/gui/DialogCharacterCodings.cc:
	* src/gui/DialogFileChooser.cc:
	* src/gui/PreferencesUI.cc:
	Fix: Dialog parent.

2008-08-10  kitone  <kitone@gna.org>

	* share/glade/Makefile.am:
	Fix: dialog-character-codings.glade missing. Patch again by Luboš Staněk.

2008-08-10  kitone  <kitone@gna.org>

	* src/gui/DialogCharacterCodings.h:
	* src/gui/DialogFileChooser.h:
	Fix: Issue with gcc-4.3 and auto_ptr. Patch by Luboš Staněk.

2008-08-07  kitone  <kitone@gna.org>

	* configure.in: