@@ -1053,7 +1053,7 @@
 		      <child>
 			<widget class="GtkLabel" id="label29">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">&lt;b&gt;Appearence&lt;/b&gt;</property>
+			  <property name="label" translatable="yes">&lt;b&gt;Appearance&lt;/b&gt;</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">True</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
