@@ -1,5 +1,15 @@
 2008-08-13  kitone  <kitone@gna.org>
 
+	* share/glade/dialog-check-errors-preferences.glade:
+	* share/glade/dialog-configure-keyboard-shortcuts.glade:
+	* share/glade/dialog-preferences.glade:
+	* share/glade/dialog-style-editor.glade:
+	* src/actions/VideoPlayerManagement.cc:
+	* src/gui/CheckErrorsUI.cc:
+	Batch of spelling fixes by Luboš Staněk.
+
+2008-08-13  kitone  <kitone@gna.org>
+
 	* src/DocumentSystem.cc:
 	Fix: Untitled document translatable.
 
